feat: all tests passing — backend complete